--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -236,7 +236,7 @@ ul.task-list input[type="checkbox"] {
 .navbar {
   box-shadow: none;
   border-bottom: 1px solid var(--global-divider-color);
-  background-color:rgb(117, 93, 129);
+  background-color: var(--global-bg-color);
   opacity: 0.95;
 }
 
@@ -587,7 +587,7 @@ footer.sticky-bottom {
 
     &.active .page-link {
       color: $white-color;
-      background-color:rgb(237, 185, 231);
+      background-color: var(--global-theme-color);
 
       &:hover {
         background-color: var(--global-theme-color);
