--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -3,7 +3,7 @@
  ******************************************************************************/
 
 :root {
-  --global-bg-color:rgb(253, 206, 246);
+  --global-bg-color:var(--global-warning-block-bg);
   --global-code-bg-color: #{$code-bg-color-light};
   --global-text-color: #{$black-color};
   --global-text-color-light: #{$grey-color};
